--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="" class="gray">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      /* 给网页添加黑白效果
+      .gray {
+        filter: grayscale(100%);
+        -webkit-filter: grayscale(100%);
+      }*/
+    </style>
     <!-- 引入清楚默认的样式 -->
     <link rel="stylesheet" href="<%= BASE_URL %>reset.css">
   </head>
